# ChangeLog for sys-apps/module-init-tools
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.24 2003/04/26 12:23:14 azarah Exp $

*module-init-tools-0.9.11a (26 Apr 2003)

  26 Apr 2003; Martin Schlemmer <azarah@gentoo.org> module-init-tools-0.9.11a.ebuild :
  Version update.

*module-init-tools-0.9.11-r3 (21 Apr 2003)

  21 Apr 2003; Daniel Robbins <drobbins@gentoo.org>: removed pkg_setup "check
  for kernel" vestige, closing bug #19183.
  
  21 Apr 2003; Daniel Robbins <drobbins@gentoo.org> two fixes: first, include a
  modinfo.old for 2.4 modinfo compatibility. Second, add a /bin/lsmod.old
  symlink to allow a normal user to list loaded modules rather than return a
  "lsmod.old" not found error. These symlinks can be confusing, but it appears
  to be working well now.

*module-init-tools-0.9.11-r2 (30 Mar 2003)

  30 Mar 2003; Martin Schlemmer <azarah@gentoo.org> module-init-tools-0.9.11-r2.ebuild :
  The moving of /sbin/lsmod to /bin, causes some breakage, so install a compat
  symlink.

*module-init-tools-0.9.11-r1 (30 Mar 2003)

  30 Mar 2003; Brandon Low <lostlogic@gentoo.org> module-init-tools-0.9.11-r1.ebuild :
  Update modutils to 2.4.25

*module-init-tools-0.9.11 (30 Mar 2003)

  30 Mar 2003; Martin Schlemmer <azarah@gentoo.org> module-init-tools-0.9.11.ebuild :
  Update version.  Really get the ${P}-be-quiet-for-devfsd.patch to be
  effective.  Move manpages for insmod, modprobe, etc to <name>.old.8 so that
  they are still available.

*module-init-tools-0.9.10-r5 (24 Mar 2003)

  24 Mar 2003; Daniel Robbins <drobbins@gentoo.org>: new rev to include a 
  PROVIDE="virtual/module-tools" and an unmasking for x86. Bumped modutils
  to 2.4.24.

  15 March 2003; Martin Schlemmer <azarah@gentoo.org> module-init-tools-0.9.10-be-quiet-for-devfsd.patch :
  Tweak slightly to be more effective on recursive calls.

*module-init-tools-0.9.10-r4 (15 March 2003)
