@@ -1,26 +1,26 @@
 MD5 a90f00448362873b556b006bb73b9a8f ChangeLog 6054
+MD5 3ae95d7b39066ea13144f88400433f34 module-init-tools-0.9.10-r3.ebuild 5851
 MD5 9510ec2b9e28197673e8506721ae152a module-init-tools-0.9.9.ebuild 3543
 MD5 90f26820c148dbdbbc5d0fb680abb72a module-init-tools-0.9.10-r4.ebuild 6915
 MD5 057ef6cb48a6f56dc81d09052b71af40 module-init-tools-0.9.10-r5.ebuild 4743
-MD5 3d0f6ffdd9f8e37af0d5837192edfba4 module-init-tools-0.9.10-r3.ebuild 5881
 MD5 25d7258103285ce3b904f1d082fdc180 module-init-tools-0.9.11-r1.ebuild 4345
 MD5 9d643bff1158c72d579d4f6a4a56c4b6 module-init-tools-0.9.11.ebuild 4339
 MD5 92aa1520bbe2efbbf1c6cd47ea2a122e module-init-tools-0.9.11-r2.ebuild 4404
 MD5 72239ca3a503685d4b8971990052bc67 module-init-tools-0.9.11-r3.ebuild 4554
 MD5 ba7bb387722b59ed31d5701d78ad4c09 module-init-tools-0.9.11a.ebuild 4559
+MD5 e20f41be805ddc7b8a6b74d52683a170 files/digest-module-init-tools-0.9.10-r3 212
 MD5 390b29c0fb86f31f1c290de3448f1ea3 files/digest-module-init-tools-0.9.9 143
+MD5 4df8ab0d7f4afe4d13b11732b8eb5508 files/module-init-tools-0.9.10-fix-recursion.patch 1986
+MD5 3bdd37447e200b986159c090991bd6be files/module-init-tools-0.9.10-no-stdout-on-log.patch 787
+MD5 37092cae20ec7562f89aea0205bda5c0 files/module-init-tools-0.9.10-use-modprobe_conf.patch 431
+MD5 9dc24220b1e193887a65b75aa066c5c0 files/module-init-tools-0.9.9-devfs-hack.patch 597
 MD5 e20f41be805ddc7b8a6b74d52683a170 files/digest-module-init-tools-0.9.10-r4 212
 MD5 28295a2b93ba19ae91062a0078c078f6 files/module-init-tools-0.9.10-be-quiet-for-devfsd.patch 3327
 MD5 060ce311606657915548168939e965b4 files/modutils-2.4.22-no-above-below.patch 382
 MD5 cef78844d070f59100d7f47b62ecf5d8 files/digest-module-init-tools-0.9.10-r5 144
 MD5 35dcc4aa984b7d408549db9141f8de53 files/digest-module-init-tools-0.9.11 144
-MD5 9dc24220b1e193887a65b75aa066c5c0 files/module-init-tools-0.9.9-devfs-hack.patch 597
-MD5 e20f41be805ddc7b8a6b74d52683a170 files/digest-module-init-tools-0.9.10-r3 212
-MD5 37092cae20ec7562f89aea0205bda5c0 files/module-init-tools-0.9.10-use-modprobe_conf.patch 431
-MD5 71d2757ca730209482fea3cb89648a27 files/digest-module-init-tools-0.9.11a 407
-MD5 4df8ab0d7f4afe4d13b11732b8eb5508 files/module-init-tools-0.9.10-fix-recursion.patch 1986
-MD5 3bdd37447e200b986159c090991bd6be files/module-init-tools-0.9.10-no-stdout-on-log.patch 787
 MD5 f507e70d4eca484c4fa0eb2750db617a files/digest-module-init-tools-0.9.11-r1 883
 MD5 45ebc93263c86224eb12c3f2c71d9275 files/module-init-tools-0.9.11-be-quiet-for-devfsd.patch 4208
 MD5 8fa0146b2762a25ceb1784a898ff3bc8 files/digest-module-init-tools-0.9.11-r2 144
 MD5 8fa0146b2762a25ceb1784a898ff3bc8 files/digest-module-init-tools-0.9.11-r3 144
+MD5 71d2757ca730209482fea3cb89648a27 files/digest-module-init-tools-0.9.11a 407
