@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/module-init-tools
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.24 2003/04/26 12:23:14 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.25 2003/05/25 15:21:00 mholzer Exp $
+
+  25 May 2003; Martin Holzer <mholzer@gentoo.org>
+  module-init-tools-0.9.10-r3.ebuild, module-init-tools-0.9.10-r4.ebuild,
+  module-init-tools-0.9.10-r5.ebuild, module-init-tools-0.9.11-r1.ebuild,
+  module-init-tools-0.9.11-r2.ebuild, module-init-tools-0.9.11-r3.ebuild,
+  module-init-tools-0.9.11.ebuild, module-init-tools-0.9.11a.ebuild,
+  module-init-tools-0.9.9.ebuild:
+  now uses mirror://kernel
 
 *module-init-tools-0.9.11a (26 Apr 2003)
 
